--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch webpack.dev.js",
     "server": "node server.js",
+    "server:production": "node server.js -p",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
@@ -41,7 +42,7 @@
     "xml-loader": "^1.2.1"
   },
   "browserslist": [
-    "cover 80%",
+    "cover 90%",
     "not IE 11",
     "not IE_Mob 11",
     "maintained node versions"
