--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch webpack.dev.js",
-    "server": "node server.js",
-    "server:production": "node server.js -p",
+    "server": "webpack-dev-server --open --config webpack.dev.js",
+    "server:production": "webpack-dev-server --open --config webpack.prod.js",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
@@ -38,13 +38,15 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2",
     "xml-loader": "^1.2.1"
   },
   "browserslist": [
-    "cover 90%",
+    "cover 99.5%",
     "not IE 11",
     "not IE_Mob 11",
-    "maintained node versions"
+    "maintained node versions",
+    "not dead"
   ]
 }
